Add builtin/ to CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
 
 # Collect sourcefiles
-FILE(GLOB SRC *.c)
+FILE(GLOB SRC *.c builtin/*.c)
 FILE(GLOB SRC_H *.h)
 
 IF (WIN32 AND NOT CYGWIN)
