Add builtin/ to CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
 
+ADD_SUBDIRECTORY(builtin)
+
 # Collect sourcefiles
 FILE(GLOB SRC *.c)
 FILE(GLOB SRC_H *.h)
@@ -31,5 +33,5 @@ FIND_PACKAGE(Libgit2 REQUIRED)
 ADD_EXECUTABLE(git2app ${SRC})
 
 INCLUDE_DIRECTORIES(${Libgit2_INCLUDE_DIR} ${Libgit2_INCLUDE_DIR}/../deps/zlib)
-TARGET_LINK_LIBRARIES(git2app ${Libgit2_LIBRARY})
+TARGET_LINK_LIBRARIES(git2app builtin ${Libgit2_LIBRARY})
 
