Rename binary to git2, CMakeLists.txt adjustments
builtin/ is not a cmake SUBDIRECTORY any more, since it does not need
CMakeLists.txt
Remove unnecesarry old Makefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
 
-ADD_SUBDIRECTORY(builtin)
-
 # Collect sourcefiles
 FILE(GLOB SRC *.c)
 FILE(GLOB SRC_H *.h)
@@ -30,8 +28,7 @@ ENDIF ()
 FIND_PACKAGE(Libgit2 REQUIRED)
 
 # Specify target
-ADD_EXECUTABLE(git2app ${SRC})
+ADD_EXECUTABLE(git2 ${SRC})
 
 INCLUDE_DIRECTORIES(${Libgit2_INCLUDE_DIR} ${Libgit2_INCLUDE_DIR}/../deps/zlib)
-TARGET_LINK_LIBRARIES(git2app builtin ${Libgit2_LIBRARY})
-
+TARGET_LINK_LIBRARIES(git2 ${Libgit2_LIBRARY})
