Rename back git2 to git2app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ ENDIF ()
 FIND_PACKAGE(Libgit2 REQUIRED)
 
 # Specify target
-ADD_EXECUTABLE(git2 ${SRC})
+ADD_EXECUTABLE(git2app ${SRC})
 
 INCLUDE_DIRECTORIES(${Libgit2_INCLUDE_DIR} ${Libgit2_INCLUDE_DIR}/../deps/zlib)
-TARGET_LINK_LIBRARIES(git2 ${Libgit2_LIBRARY})
+TARGET_LINK_LIBRARIES(git2app ${Libgit2_LIBRARY})
